feat: add scraper service
